# deps

./: CHANGELOG.md  Cargo.toml  Makefile  README.md
.ci/: test-cover
.github/workflows/: test-and-lint.yml
src/: error.rs  lib.rs  main.rs  operating_system.rs  package_type.rs
src/package_type/: repology.rs
