[package]
name = "pgxn_deps"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
purl = "0.1.3"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.3"
