[package]
name = "pgxn_deps"
version = "0.1.0"
edition = "2021"

[dependencies]
argh = "0.1.12"
async-trait = "0.1.83"
purl = "0.1.3"
reqwest = { version = "0.12.7", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "1.0.64"
tokio = { version = "1.41.0", features = ["full"] }
url = "2.5.3"
